enhance vacancy card layout so rows are aligned/spaced correctly

--- a/app/frontend/src/styles/application/publishers/awaiting-feedback-vacancies.scss
+++ b/app/frontend/src/styles/application/publishers/awaiting-feedback-vacancies.scss
@@ -3,7 +3,7 @@
 }
 
 .vacancy__feedback .govuk-list {
-  margin: govuk-spacing(4) auto;
+  margin: 0 auto;
   text-align: left;
   width: 80%;
 }
